--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 05 Nov. 2022 -->
+<!-- 13 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Duncan Mac-Vicar P.</title>
@@ -51,9 +51,9 @@
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-org03acc50" class="outline-2 post-list">
-<h2 id="org03acc50"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-org03acc50">
+<section id="outline-container-orge1f3e0e" class="outline-2 post-list">
+<h2 id="orge1f3e0e"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-orge1f3e0e">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">20 Oct 2020</span></span>  <a href="posts/2020-10-20-migrating-away-google-services/index.html">Migrating away from Google services</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">14 Sep 2020</span></span>  <a href="posts/2020-09-14-prose-linting-vale-emacs.org/index.html">Prose linting with Vale and Emacs</a></li>
@@ -70,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-orge2d968a" class="outline-2 post-list">
-<h2 id="orge2d968a"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-orge2d968a">
+<section id="outline-container-org2774463" class="outline-2 post-list">
+<h2 id="org2774463"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-org2774463">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -91,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org79bb392" class="outline-2 post-list">
-<h2 id="org79bb392"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-org79bb392">
+<section id="outline-container-orgbf81e48" class="outline-2 post-list">
+<h2 id="orgbf81e48"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-orgbf81e48">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
@@ -103,7 +103,7 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 05 Nov. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 13 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
