--- a/setup.html
+++ b/setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 05 Nov. 2022 -->
+<!-- 13 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My personal setup</title>
@@ -49,9 +49,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-org86bf1f1" class="outline-2">
-<h2 id="org86bf1f1">General setup</h2>
-<div class="outline-text-2" id="text-org86bf1f1">
+<section id="outline-container-orgfddfd5e" class="outline-2">
+<h2 id="orgfddfd5e">General setup</h2>
+<div class="outline-text-2" id="text-orgfddfd5e">
 <p>
 I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
@@ -101,9 +101,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-orgc35f20e" class="outline-2">
-<h2 id="orgc35f20e">Work</h2>
-<div class="outline-text-2" id="text-orgc35f20e">
+<section id="outline-container-org2d62da4" class="outline-2">
+<h2 id="org2d62da4">Work</h2>
+<div class="outline-text-2" id="text-org2d62da4">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -120,9 +120,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-org7db2e26" class="outline-4">
-<h4 id="org7db2e26">Other</h4>
-<div class="outline-text-4" id="text-org7db2e26">
+<div id="outline-container-org76c66ff" class="outline-4">
+<h4 id="org76c66ff">Other</h4>
+<div class="outline-text-4" id="text-org76c66ff">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-org5f9cebd" class="outline-2">
-<h2 id="org5f9cebd">Development environment</h2>
-<div class="outline-text-2" id="text-org5f9cebd">
+<section id="outline-container-orge9934dd" class="outline-2">
+<h2 id="orge9934dd">Development environment</h2>
+<div class="outline-text-2" id="text-orge9934dd">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -146,27 +146,27 @@ This setup is kept in an internal dotfiles repository.
 </ul>
 </div>
 
-<div id="outline-container-orgbd8396a" class="outline-4">
-<h4 id="orgbd8396a">C++</h4>
-<div class="outline-text-4" id="text-orgbd8396a">
+<div id="outline-container-orgd749760" class="outline-4">
+<h4 id="orgd749760">C++</h4>
+<div class="outline-text-4" id="text-orgd749760">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc2268da" class="outline-4">
-<h4 id="orgc2268da">Ruby</h4>
-<div class="outline-text-4" id="text-orgc2268da">
+<div id="outline-container-org9a93ae0" class="outline-4">
+<h4 id="org9a93ae0">Ruby</h4>
+<div class="outline-text-4" id="text-org9a93ae0">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org616a8ff" class="outline-4">
-<h4 id="org616a8ff">Golang</h4>
-<div class="outline-text-4" id="text-org616a8ff">
+<div id="outline-container-orgfc4d289" class="outline-4">
+<h4 id="orgfc4d289">Golang</h4>
+<div class="outline-text-4" id="text-orgfc4d289">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
@@ -178,7 +178,7 @@ This setup is kept in an internal dotfiles repository.
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 05 Nov. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 13 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
