--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 13 Jan. 2023 -->
+<!-- 15 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org531e1e2">
+<figure id="org2b9fcb5">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-orga2ed929" class="outline-2">
-<h2 id="orga2ed929">Introduction</h2>
-<div class="outline-text-2" id="text-orga2ed929">
+<section id="outline-container-org6bfb0a1" class="outline-2">
+<h2 id="org6bfb0a1">Introduction</h2>
+<div class="outline-text-2" id="text-org6bfb0a1">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orga3abc56" class="outline-2">
-<h2 id="orga3abc56">Implementation</h2>
-<div class="outline-text-2" id="text-orga3abc56">
+<section id="outline-container-org50c924b" class="outline-2">
+<h2 id="org50c924b">Implementation</h2>
+<div class="outline-text-2" id="text-org50c924b">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orgf17a8bb" class="outline-2">
-<h2 id="orgf17a8bb">Usage</h2>
-<div class="outline-text-2" id="text-orgf17a8bb">
+<section id="outline-container-org9afc089" class="outline-2">
+<h2 id="org9afc089">Usage</h2>
+<div class="outline-text-2" id="text-org9afc089">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org1cf6755">
+<pre class="example" id="org2d29312">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org7225506" class="outline-3">
-<h3 id="org7225506">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org7225506">
+<div id="outline-container-orgce1cddd" class="outline-3">
+<h3 id="orgce1cddd">RSS Feeds</h3>
+<div class="outline-text-3" id="text-orgce1cddd">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-orgf27418f" class="outline-2">
-<h2 id="orgf27418f">Features</h2>
-<div class="outline-text-2" id="text-orgf27418f">
+<section id="outline-container-org355a74d" class="outline-2">
+<h2 id="org355a74d">Features</h2>
+<div class="outline-text-2" id="text-org355a74d">
 </div>
-<div id="outline-container-orgdf24e16" class="outline-4">
-<h4 id="orgdf24e16">Redirection</h4>
-<div class="outline-text-4" id="text-orgdf24e16">
+<div id="outline-container-org4c247b6" class="outline-4">
+<h4 id="org4c247b6">Redirection</h4>
+<div class="outline-text-4" id="text-org4c247b6">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgf0d7fcb" class="outline-3">
-<h3 id="orgf0d7fcb">Drafts</h3>
-<div class="outline-text-3" id="text-orgf0d7fcb">
+<div id="outline-container-org1608e97" class="outline-3">
+<h3 id="org1608e97">Drafts</h3>
+<div class="outline-text-3" id="text-org1608e97">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-org556cdef" class="outline-2">
-<h2 id="org556cdef">License</h2>
-<div class="outline-text-2" id="text-org556cdef">
+<section id="outline-container-orgecc8193" class="outline-2">
+<h2 id="orgecc8193">License</h2>
+<div class="outline-text-2" id="text-orgecc8193">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -208,7 +208,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 13 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 15 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
