--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 13 Jan. 2023 -->
+<!-- 15 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Duncan Mac-Vicar P.</title>
@@ -51,15 +51,15 @@
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-orge1f3e0e" class="outline-2 post-list">
-<h2 id="orge1f3e0e"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-orge1f3e0e">
+<section id="outline-container-org1ac594a" class="outline-2 post-list">
+<h2 id="org1ac594a"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-org1ac594a">
 <ul class="org-ul">
+<li><span class="timestamp-wrapper"><span class="timestamp">15 Jan 2023</span></span>  <a href="posts/2023-01-15-exciting-technologies/index.html">2022: Exciting software projects, technologies and trends</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">20 Oct 2020</span></span>  <a href="posts/2020-10-20-migrating-away-google-services/index.html">Migrating away from Google services</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">14 Sep 2020</span></span>  <a href="posts/2020-09-14-prose-linting-vale-emacs.org/index.html">Prose linting with Vale and Emacs</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">07 Sep 2020</span></span>  <a href="posts/2020-09-07-k3s-on-rpi-with-salt/index.html">Raspberry Pi cluster with k3s &amp; Salt (Part 1)</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">03 Sep 2019</span></span>  <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">Migrating from Jekyll to org-mode and Github Actions</a></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">11 Jul 2016</span></span>  <a href="posts/2016-07-11-building-docker-images-with-plain-salt/index.html">Building Docker images with plain Salt</a></li>
 </ul>
 
 <p>
@@ -70,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org2774463" class="outline-2 post-list">
-<h2 id="org2774463"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-org2774463">
+<section id="outline-container-orgc72f4e4" class="outline-2 post-list">
+<h2 id="orgc72f4e4"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-orgc72f4e4">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -91,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-orgbf81e48" class="outline-2 post-list">
-<h2 id="orgbf81e48"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-orgbf81e48">
+<section id="outline-container-org7b7b7f8" class="outline-2 post-list">
+<h2 id="org7b7b7f8"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-org7b7b7f8">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
@@ -103,7 +103,7 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 13 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 15 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
