--- a/tutorials/rpm-packaging/index.html
+++ b/tutorials/rpm-packaging/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 13 Jan. 2023 -->
+<!-- 15 Jan. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>RPM Packaging Tutorial</title>
@@ -210,7 +210,7 @@ Lets start with a famous UNIX tool: <code>rsync</code>.
 So a package is an archive file:
 </p>
 
-<pre class="example" id="orgf90bdfb">
+<pre class="example" id="orge8cc817">
 rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -218,7 +218,7 @@ rsync-3.1.2-1.5.x86_64.rpm
 containing all files related to the application:
 </p>
 
-<pre class="example" id="org0efb83a">
+<pre class="example" id="orgb49c072">
 $ rpm -qpl rsync-3.1.2-1.5.x86_64.rpm
 
 /etc/logrotate.d/rsync
@@ -249,7 +249,7 @@ to:
 <li><code>Name</code>, <code>Summary</code>, <code>Description</code>, <code>License</code>, etc.</li>
 </ul>
 
-<pre class="example" id="org4bde74c">
+<pre class="example" id="orgfbd2a8a">
 $ rpm -qpi rsync-3.1.2-1.5.x86_64.rpm
 
 Name        : rsync
@@ -286,7 +286,7 @@ Distribution: openSUSE Tumbleweed
 (<code>Requires</code>)</li>
 </ul>
 
-<pre class="example" id="org913cbe4">
+<pre class="example" id="org4e3dfb5">
 $ rpm -qp --requires rsync-3.1.2-1.5.x86_64.rpm
 /bin/sh
 /usr/bin/perl
@@ -327,7 +327,7 @@ called during runtime.
 <li>What does the package provide for other packages to work (<code>Provides</code>)</li>
 </ul>
 
-<pre class="example" id="org67f36d9">
+<pre class="example" id="orgef0bc66">
 $ rpm -qp --provides rsync-3.1.2-1.5.x86_64.rpm
 config(rsync) = 3.1.2-1.5
 rsync = 3.1.2-1.5
@@ -356,7 +356,7 @@ level.
 Packages can be installed with the <code>rpm</code> tools:
 </p>
 
-<pre class="example" id="org8430e83">
+<pre class="example" id="org512fbe5">
 $ rpm -U rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -367,7 +367,7 @@ the <code>-p</code> option and use what is called the NVRA
 subset of it, e.g. just name (<code>rsync</code>).
 </p>
 
-<pre class="example" id="org4da895f">
+<pre class="example" id="org1e132fc">
 $ rpm -q --provides rsync
 </pre>
 
@@ -433,7 +433,7 @@ build system scanned the executable <code>/usr/lib/rsync</code> and realized it 
 linked against <code>libc.so.6</code>:
 </p>
 
-<pre class="example" id="org2baac4a">
+<pre class="example" id="org4541ff5">
 $ ldd /usr/bin/rsync
         linux-vdso.so.1 (0x00007ffccb34a000)
         libacl.so.1 =&gt; /lib64/libacl.so.1 (0x00007fc406028000)
@@ -462,7 +462,7 @@ only <code>Requires: libsound</code> (as in package name). Then when he/she trie
 to run it:
 </p>
 
-<pre class="example" id="org44ff3ac">
+<pre class="example" id="org4663122">
 $ musicplayer
 error while loading shared libraries: libsound.so.7: cannot open shared object file: No such file or directory
 </pre>
@@ -573,7 +573,7 @@ includes a command-line tool called <code>zypper</code>. While tools like
 console you will likely interact with <code>zypper</code>.
 </p>
 
-<pre class="example" id="orgac576f1">
+<pre class="example" id="org99d7e4e">
 $ zypper install rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -616,7 +616,7 @@ package, and then rpm files are retrieved on demand at installation
 time.
 </p>
 
-<pre class="example" id="org3e43536">
+<pre class="example" id="org4be6fb0">
 $ zypper lr
 
 # | Alias          | Name           | Enabled | GPG Check | Refresh
@@ -678,7 +678,7 @@ rpm files into its cache.
 <div id="outline-container-refreshing-a-repository" class="outline-4">
 <h4 id="refreshing-a-repository">Refreshing a repository</h4>
 <div class="outline-text-4" id="text-refreshing-a-repository">
-<pre class="example" id="org3961006">
+<pre class="example" id="org4cd94d3">
 $ zypper ref
 </pre>
 
@@ -810,7 +810,7 @@ Patterns are used to install a collection of software in a comfortable
 way. For example you can install a working Laptop-oriented system with:
 </p>
 
-<pre class="example" id="org2d998c6">
+<pre class="example" id="org616b72f">
 $ zypper install -t pattern laptop
 </pre>
 
@@ -839,7 +839,7 @@ of the magic behind patterns (equivalent to
 Similar to patterns, products can be queried with:
 </p>
 
-<pre class="example" id="org519a09f">
+<pre class="example" id="org98f7f2d">
 $ zypper search -t product
 </pre>
 
@@ -882,7 +882,7 @@ package manager will dynamically read <code>/sys/devices</code> and make this
 entity have provides like:
 </p>
 
-<pre class="example" id="org4fd5636">
+<pre class="example" id="org8de5faa">
 Provides :modalias(pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 </pre>
 
@@ -891,7 +891,7 @@ Then, a package providing a WLAN driver for some cards (e.g.
 <code>wlan-kmp-default</code>), could have the following dependencies:
 </p>
 
-<pre class="example" id="org0dd4a0c">
+<pre class="example" id="orgad11dfc">
 Supplements: modalias(kernel-default:pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v0000104Cd00009066sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v000010B7d00006000sv*sd*bc*sc*i*)
@@ -940,7 +940,7 @@ injected as we already mentioned), and how the content of the package is
 created. A very simple spec file would be:
 </p>
 
-<pre class="example" id="orgf6bdda8">
+<pre class="example" id="org442c10b">
 Name:           mypackage
 Version:        1.0
 Release:        0
@@ -988,7 +988,7 @@ like <code>%{_prefix}</code>, <code>%{_datadir}</code>, <code>%{_mandir}</code>,
 <code>%{_bindir}</code>, etc. You can evaluate a macro like this:
 </p>
 
-<pre class="example" id="orgbd08064">
+<pre class="example" id="orga462505">
 $ rpm --eval "%{_libdir}"
 /usr/lib64
 </pre>
@@ -1041,7 +1041,7 @@ file to be in a specific location, so I usually tweak the standard
 configuration so that spec files are searched in the current directory:
 </p>
 
-<pre class="example" id="org3f4452c">
+<pre class="example" id="org0a346e5">
 $ cat ~/.rpmmacros
 %topdir /space/packages
 %_builddir %{topdir}/build
@@ -1060,7 +1060,7 @@ As you can see, I also configure it so that built packages are saved in
 Once I have this setup, I can do:
 </p>
 
-<pre class="example" id="org3e57006">
+<pre class="example" id="orgb1afbbc">
 $ rpmbuild -bb mypackage.spec
 Executing(%install): /bin/sh -e /var/tmp/rpm-tmp.lVzwnj
 + umask 022
@@ -1085,7 +1085,7 @@ Executing(%clean): /bin/sh -e /var/tmp/rpm-tmp.0xLGri
 Now I can verify the content of the package:
 </p>
 
-<pre class="example" id="org6aac2a1">
+<pre class="example" id="org3a4179d">
 % rpm -qpl /space/packages/rpms/x86_64/mypackage-1.0-0.x86_64.rpm
 /usr/share/mypackage/CONTENT
 </pre>
@@ -1145,7 +1145,7 @@ On the other hand, the original <code>oracle-instantclient-sqlplus</code> packag
 is required at runtime, but we don&rsquo;t need it to build our package.
 </p>
 
-<pre class="example" id="orgd80522f">
+<pre class="example" id="orgc917165">
 Name:           gqlplus
 Version:        1.15
 Release:        0
@@ -1213,7 +1213,7 @@ installed by the -devel packages, it will be scanned and the right
 <code>Requires</code> injected:
 </p>
 
-<pre class="example" id="org7932aef">
+<pre class="example" id="orgcc37dda">
 $ rpm -qp --requires gqlplus-1.15-0.x86_64.rpm
 libc.so.6()(64bit)
 ...
@@ -1228,7 +1228,7 @@ These symbols are provided by the right package, so the solver will
 match them:
 </p>
 
-<pre class="example" id="org5317a50">
+<pre class="example" id="org78c1aa1">
 rpm -q --whatprovides 'libncurses.so.6()(64bit)'
 libncurses6-6.0-19.1.x86_64
 </pre>
@@ -1299,7 +1299,7 @@ right order and re-published.
 </p>
 
 
-<figure id="org6ea3491">
+<figure id="org3679f93">
 <img src="images/gqlplus-obs.png" alt="gqlplus-obs.png">
 
 </figure>
@@ -1323,7 +1323,7 @@ With the <code>osc</code> tool you can checkout packages from OBS, make changes 
 resubmit them.
 </p>
 
-<pre class="example" id="orge3350f1">
+<pre class="example" id="org069863a">
 $ osc co home:dmacvicar gqlplus
 A    home:dmacvicar
 A    home:dmacvicar/gqlplus
@@ -1343,7 +1343,7 @@ machine), setting up that environment automatically using the
 a different distribution than the one you are running.
 </p>
 
-<pre class="example" id="orga03b41a">
+<pre class="example" id="org376a1c4">
 $ cd home:dmacvicar/gqlplus
 $ osc build openSUSE_Leap_42.2
 ...
@@ -1372,7 +1372,7 @@ sources by hundreds of contributors.
 The <code>spec-cleaner</code> tool can help you keeping your spec file in shape:
 </p>
 
-<pre class="example" id="org2e473c5">
+<pre class="example" id="orgc20e5b8">
 $ spec-cleaner -i gqlplus.spec
 </pre>
 
@@ -1424,7 +1424,7 @@ developed. It is easy to find the devel project using the <code>develproject</co
 (<code>dp</code>) command:
 </p>
 
-<pre class="example" id="org5a90a32">
+<pre class="example" id="org7e957d4">
 $ osc dp openSUSE:Factory rsync
 network
 </pre>
@@ -1434,7 +1434,7 @@ Create a branch and a local checkout of the package using the <code>branch</code
 command:
 </p>
 
-<pre class="example" id="org0fb563a">
+<pre class="example" id="org33383c8">
 $ osc bco network rsync
 A    home:dmacvicar:branches:network
 A    home:dmacvicar:branches:network/rsync
@@ -1465,7 +1465,7 @@ into the devel project. To do this, use the <code>submitrequest</code> (<code>sr
 command:
 </p>
 
-<pre class="example" id="org2272fe8">
+<pre class="example" id="orgd7dc33d">
 $ osc sr
 </pre>
 
@@ -1484,7 +1484,7 @@ needed, however.
 <footer id="postamble" class="status">
 <p class="date">Date: 2017-03-08</p>
 <p class="author">Author: Duncan Mac-Vicar P.</p>
-<p class="date">Created: 13 Jan. 2023</p>
+<p class="date">Created: 15 Jan. 2023</p>
 </footer>
 </body>
 </html>
