--- a/README.html
+++ b/README.html
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org2b9fcb5">
+<figure id="org6cd6d32">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-org6bfb0a1" class="outline-2">
-<h2 id="org6bfb0a1">Introduction</h2>
-<div class="outline-text-2" id="text-org6bfb0a1">
+<section id="outline-container-org174a568" class="outline-2">
+<h2 id="org174a568">Introduction</h2>
+<div class="outline-text-2" id="text-org174a568">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org50c924b" class="outline-2">
-<h2 id="org50c924b">Implementation</h2>
-<div class="outline-text-2" id="text-org50c924b">
+<section id="outline-container-orge35a0c8" class="outline-2">
+<h2 id="orge35a0c8">Implementation</h2>
+<div class="outline-text-2" id="text-orge35a0c8">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org9afc089" class="outline-2">
-<h2 id="org9afc089">Usage</h2>
-<div class="outline-text-2" id="text-org9afc089">
+<section id="outline-container-org75afae7" class="outline-2">
+<h2 id="org75afae7">Usage</h2>
+<div class="outline-text-2" id="text-org75afae7">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org2d29312">
+<pre class="example" id="org0974859">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-orgce1cddd" class="outline-3">
-<h3 id="orgce1cddd">RSS Feeds</h3>
-<div class="outline-text-3" id="text-orgce1cddd">
+<div id="outline-container-org8bc373f" class="outline-3">
+<h3 id="org8bc373f">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org8bc373f">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org355a74d" class="outline-2">
-<h2 id="org355a74d">Features</h2>
-<div class="outline-text-2" id="text-org355a74d">
+<section id="outline-container-orgfa63aca" class="outline-2">
+<h2 id="orgfa63aca">Features</h2>
+<div class="outline-text-2" id="text-orgfa63aca">
 </div>
-<div id="outline-container-org4c247b6" class="outline-4">
-<h4 id="org4c247b6">Redirection</h4>
-<div class="outline-text-4" id="text-org4c247b6">
+<div id="outline-container-orgcf904e6" class="outline-4">
+<h4 id="orgcf904e6">Redirection</h4>
+<div class="outline-text-4" id="text-orgcf904e6">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-org1608e97" class="outline-3">
-<h3 id="org1608e97">Drafts</h3>
-<div class="outline-text-3" id="text-org1608e97">
+<div id="outline-container-orgb16e089" class="outline-3">
+<h3 id="orgb16e089">Drafts</h3>
+<div class="outline-text-3" id="text-orgb16e089">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgecc8193" class="outline-2">
-<h2 id="orgecc8193">License</h2>
-<div class="outline-text-2" id="text-orgecc8193">
+<section id="outline-container-orgc6e1993" class="outline-2">
+<h2 id="orgc6e1993">License</h2>
+<div class="outline-text-2" id="text-orgc6e1993">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
