deploy: 9961a1f8d16be494e98ea75368c3131867eec3d5

--- a/README.html
+++ b/README.html
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org6cd6d32">
+<figure id="orgb14f54c">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-org174a568" class="outline-2">
-<h2 id="org174a568">Introduction</h2>
-<div class="outline-text-2" id="text-org174a568">
+<section id="outline-container-orgdd6ae2e" class="outline-2">
+<h2 id="orgdd6ae2e">Introduction</h2>
+<div class="outline-text-2" id="text-orgdd6ae2e">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orge35a0c8" class="outline-2">
-<h2 id="orge35a0c8">Implementation</h2>
-<div class="outline-text-2" id="text-orge35a0c8">
+<section id="outline-container-orgcb401a1" class="outline-2">
+<h2 id="orgcb401a1">Implementation</h2>
+<div class="outline-text-2" id="text-orgcb401a1">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org75afae7" class="outline-2">
-<h2 id="org75afae7">Usage</h2>
-<div class="outline-text-2" id="text-org75afae7">
+<section id="outline-container-org2fbdd88" class="outline-2">
+<h2 id="org2fbdd88">Usage</h2>
+<div class="outline-text-2" id="text-org2fbdd88">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org0974859">
+<pre class="example" id="org9c830ea">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org8bc373f" class="outline-3">
-<h3 id="org8bc373f">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org8bc373f">
+<div id="outline-container-org9e5a170" class="outline-3">
+<h3 id="org9e5a170">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org9e5a170">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-orgfa63aca" class="outline-2">
-<h2 id="orgfa63aca">Features</h2>
-<div class="outline-text-2" id="text-orgfa63aca">
+<section id="outline-container-org85ffb24" class="outline-2">
+<h2 id="org85ffb24">Features</h2>
+<div class="outline-text-2" id="text-org85ffb24">
 </div>
-<div id="outline-container-orgcf904e6" class="outline-4">
-<h4 id="orgcf904e6">Redirection</h4>
-<div class="outline-text-4" id="text-orgcf904e6">
+<div id="outline-container-org012e150" class="outline-4">
+<h4 id="org012e150">Redirection</h4>
+<div class="outline-text-4" id="text-org012e150">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgb16e089" class="outline-3">
-<h3 id="orgb16e089">Drafts</h3>
-<div class="outline-text-3" id="text-orgb16e089">
+<div id="outline-container-orge289ae2" class="outline-3">
+<h3 id="orge289ae2">Drafts</h3>
+<div class="outline-text-3" id="text-orge289ae2">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgc6e1993" class="outline-2">
-<h2 id="orgc6e1993">License</h2>
-<div class="outline-text-2" id="text-orgc6e1993">
+<section id="outline-container-org4e0e355" class="outline-2">
+<h2 id="org4e0e355">License</h2>
+<div class="outline-text-2" id="text-org4e0e355">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
