--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-org16ac99c" class="outline-2 post-list">
-<h2 id="org16ac99c"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-org16ac99c">
+<section id="outline-container-org1e10f41" class="outline-2 post-list">
+<h2 id="org1e10f41"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-org1e10f41">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">20 Oct 2020</span></span>  <a href="posts/2020-10-20-migrating-away-google-services/index.html">Migrating away from Google services</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">14 Sep 2020</span></span>  <a href="posts/2020-09-14-prose-linting-vale-emacs.org/index.html">Prose linting with Vale and Emacs</a></li>
@@ -70,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org7387ff0" class="outline-2 post-list">
-<h2 id="org7387ff0"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-org7387ff0">
+<section id="outline-container-org3b5732e" class="outline-2 post-list">
+<h2 id="org3b5732e"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-org3b5732e">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -91,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org74b2aee" class="outline-2 post-list">
-<h2 id="org74b2aee"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-org74b2aee">
+<section id="outline-container-org1b45a53" class="outline-2 post-list">
+<h2 id="org1b45a53"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-org1b45a53">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
