--- a/setup.html
+++ b/setup.html
@@ -49,9 +49,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-orga717767" class="outline-2">
-<h2 id="orga717767">General setup</h2>
-<div class="outline-text-2" id="text-orga717767">
+<section id="outline-container-org76f9c13" class="outline-2">
+<h2 id="org76f9c13">General setup</h2>
+<div class="outline-text-2" id="text-org76f9c13">
 <p>
 I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
@@ -101,9 +101,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-orgd7161fe" class="outline-2">
-<h2 id="orgd7161fe">Work</h2>
-<div class="outline-text-2" id="text-orgd7161fe">
+<section id="outline-container-orgeb11dfa" class="outline-2">
+<h2 id="orgeb11dfa">Work</h2>
+<div class="outline-text-2" id="text-orgeb11dfa">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -120,9 +120,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-org0d62bd6" class="outline-4">
-<h4 id="org0d62bd6">Other</h4>
-<div class="outline-text-4" id="text-org0d62bd6">
+<div id="outline-container-org928117d" class="outline-4">
+<h4 id="org928117d">Other</h4>
+<div class="outline-text-4" id="text-org928117d">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-org076718d" class="outline-2">
-<h2 id="org076718d">Development environment</h2>
-<div class="outline-text-2" id="text-org076718d">
+<section id="outline-container-org9f37204" class="outline-2">
+<h2 id="org9f37204">Development environment</h2>
+<div class="outline-text-2" id="text-org9f37204">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -146,27 +146,27 @@ This setup is kept in an internal dotfiles repository.
 </ul>
 </div>
 
-<div id="outline-container-org5cf15d3" class="outline-4">
-<h4 id="org5cf15d3">C++</h4>
-<div class="outline-text-4" id="text-org5cf15d3">
+<div id="outline-container-orgbb9b5f1" class="outline-4">
+<h4 id="orgbb9b5f1">C++</h4>
+<div class="outline-text-4" id="text-orgbb9b5f1">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org3865eb8" class="outline-4">
-<h4 id="org3865eb8">Ruby</h4>
-<div class="outline-text-4" id="text-org3865eb8">
+<div id="outline-container-org534cab6" class="outline-4">
+<h4 id="org534cab6">Ruby</h4>
+<div class="outline-text-4" id="text-org534cab6">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org409fb4d" class="outline-4">
-<h4 id="org409fb4d">Golang</h4>
-<div class="outline-text-4" id="text-org409fb4d">
+<div id="outline-container-orga8905f7" class="outline-4">
+<h4 id="orga8905f7">Golang</h4>
+<div class="outline-text-4" id="text-orga8905f7">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
