deploy: 710ca37c39dd9b136b8a22c12d6971faa8bba7e8

--- a/README.html
+++ b/README.html
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="orgb14f54c">
+<figure id="org0946cf1">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-orgdd6ae2e" class="outline-2">
-<h2 id="orgdd6ae2e">Introduction</h2>
-<div class="outline-text-2" id="text-orgdd6ae2e">
+<section id="outline-container-orgf638675" class="outline-2">
+<h2 id="orgf638675">Introduction</h2>
+<div class="outline-text-2" id="text-orgf638675">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orgcb401a1" class="outline-2">
-<h2 id="orgcb401a1">Implementation</h2>
-<div class="outline-text-2" id="text-orgcb401a1">
+<section id="outline-container-orgc1f2d81" class="outline-2">
+<h2 id="orgc1f2d81">Implementation</h2>
+<div class="outline-text-2" id="text-orgc1f2d81">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org2fbdd88" class="outline-2">
-<h2 id="org2fbdd88">Usage</h2>
-<div class="outline-text-2" id="text-org2fbdd88">
+<section id="outline-container-org3215490" class="outline-2">
+<h2 id="org3215490">Usage</h2>
+<div class="outline-text-2" id="text-org3215490">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org9c830ea">
+<pre class="example" id="orga7c999d">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org9e5a170" class="outline-3">
-<h3 id="org9e5a170">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org9e5a170">
+<div id="outline-container-orgae0d276" class="outline-3">
+<h3 id="orgae0d276">RSS Feeds</h3>
+<div class="outline-text-3" id="text-orgae0d276">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org85ffb24" class="outline-2">
-<h2 id="org85ffb24">Features</h2>
-<div class="outline-text-2" id="text-org85ffb24">
+<section id="outline-container-org1f688ad" class="outline-2">
+<h2 id="org1f688ad">Features</h2>
+<div class="outline-text-2" id="text-org1f688ad">
 </div>
-<div id="outline-container-org012e150" class="outline-4">
-<h4 id="org012e150">Redirection</h4>
-<div class="outline-text-4" id="text-org012e150">
+<div id="outline-container-orgdf30953" class="outline-4">
+<h4 id="orgdf30953">Redirection</h4>
+<div class="outline-text-4" id="text-orgdf30953">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orge289ae2" class="outline-3">
-<h3 id="orge289ae2">Drafts</h3>
-<div class="outline-text-3" id="text-orge289ae2">
+<div id="outline-container-orgb6f5c13" class="outline-3">
+<h3 id="orgb6f5c13">Drafts</h3>
+<div class="outline-text-3" id="text-orgb6f5c13">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-org4e0e355" class="outline-2">
-<h2 id="org4e0e355">License</h2>
-<div class="outline-text-2" id="text-org4e0e355">
+<section id="outline-container-orgce729c9" class="outline-2">
+<h2 id="orgce729c9">License</h2>
+<div class="outline-text-2" id="text-orgce729c9">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
